--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/angularTesting
     docker:
-      - image: circleci/node:10.5-browsers-legacy
+      - image: circleci/node:8-browsers
     steps:
       - checkout
       - restore_cache:
