--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,38 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 jobs:
   build:
-    working_directory: ~/angularTesting
     docker:
-      - image: circleci/node:8-browsers
+      # specify the version you desire here
+      - image: circleci/node:8
+    
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
+
+    working_directory: ~/angularTesting
+
     steps:
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run: 
-          name: Install Dependencies
-          command: npm install
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: npm install
+
       - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - node_modules
-      - run:
-        name: Angular CLI Prod Build
-        command: npm run-script build
+          key: v1-dependencies-{{ checksum "package.json" }}
 
-  test:
-    working_directory: ~/angularTesting
-    docker:
-      - image: circleci/node:8-browsers
-      steps:
-        - checkout
-        - restore_cache:
-            key: dependency-cache-{{ checksum "package.json" }}
-        - run: 
-            name: Install Dependencies
-            command: npm install
-        - save_cache:
-            key: dependency-cache-{{ checksum "package.json" }}
-            paths:
-              - node_modules
-        - run:
-            name: Run Unit Tests
-            command: npm run-script test
-
+      # run tests!
+      - run: npm test
